// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment with replies renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Comment
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/profile-pic-may.jpg",
          },
          "name": "May F",
        },
        "body": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
        "dateCreated": 2019-01-01T00:00:00.000Z,
        "id": "21097",
        "title": "Meu pai fez o que ela mandou…",
        "totalReplies": 1,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Object {
            "alignItems": "stretch",
            "flex": 1,
            "flexDirection": "row",
            "margin": 10,
          }
        }
      >
        <View
          style={
            Object {
              "width": 60,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(45, 82, 113)",
                "borderRadius": 11,
                "flexDirection": "column",
                "height": 22,
                "justifyContent": "center",
                "left": 35,
                "position": "absolute",
                "width": 22,
                "zIndex": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgb(255, 255, 255)",
                  "fontSize": 12,
                }
              }
            >
              1
            </Text>
          </View>
          <View>
            <Component
              source={
                Object {
                  "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                }
              }
              style={
                Object {
                  "backgroundColor": "rgba(4, 71, 47, 0.75)",
                  "borderRadius": 25,
                  "height": 50,
                  "marginTop": 10,
                  "overflow": "hidden",
                  "width": 50,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "marginBottom": 10,
              "marginLeft": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "marginBottom": 6,
              }
            }
          >
            Meu pai fez o que ela mandou…
          </Text>
          <Text
            style={
              Object {
                "color": "rgb(51, 51, 51)",
                "fontStyle": "italic",
                "marginBottom": 10,
              }
            }
          >
            01/01/2019
          </Text>
          <Text
            style={
              Object {
                "flex": 1,
                "flexWrap": "nowrap",
              }
            }
          >
            Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
          </Text>
        </View>
      </View>,
      "onPress": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "width": 60,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(45, 82, 113)",
                  "borderRadius": 11,
                  "flexDirection": "column",
                  "height": 22,
                  "justifyContent": "center",
                  "left": 35,
                  "position": "absolute",
                  "width": 22,
                  "zIndex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "rgb(255, 255, 255)",
                    "fontSize": 12,
                  }
                }
              >
                1
              </Text>
            </View>
            <View>
              <Component
                source={
                  Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  }
                }
                style={
                  Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 25,
                    "height": 50,
                    "marginTop": 10,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
            </View>
          </View>,
          <View
            style={
              Object {
                "flex": 1,
                "marginBottom": 10,
                "marginLeft": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 18,
                  "marginBottom": 6,
                }
              }
            >
              Meu pai fez o que ela mandou…
            </Text>
            <Text
              style={
                Object {
                  "color": "rgb(51, 51, 51)",
                  "fontStyle": "italic",
                  "marginBottom": 10,
                }
              }
            >
              01/01/2019
            </Text>
            <Text
              style={
                Object {
                  "flex": 1,
                  "flexWrap": "nowrap",
                }
              }
            >
              Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
            </Text>
          </View>,
        ],
        "style": Object {
          "alignItems": "stretch",
          "flex": 1,
          "flexDirection": "row",
          "margin": 10,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgb(45, 82, 113)",
                    "borderRadius": 11,
                    "flexDirection": "column",
                    "height": 22,
                    "justifyContent": "center",
                    "left": 35,
                    "position": "absolute",
                    "width": 22,
                    "zIndex": 1,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(255, 255, 255)",
                      "fontSize": 12,
                    }
                  }
                >
                  1
                </Text>
              </View>,
              <View>
                <Component
                  source={
                    Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    }
                  }
                  style={
                    Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 25,
                      "height": 50,
                      "marginTop": 10,
                      "overflow": "hidden",
                      "width": 50,
                    }
                  }
                />
              </View>,
            ],
            "style": Object {
              "width": 60,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Text
                  style={
                    Object {
                      "color": "rgb(255, 255, 255)",
                      "fontSize": 12,
                    }
                  }
                >
                  1
                </Text>,
                "style": Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(45, 82, 113)",
                  "borderRadius": 11,
                  "flexDirection": "column",
                  "height": 22,
                  "justifyContent": "center",
                  "left": 35,
                  "position": "absolute",
                  "width": 22,
                  "zIndex": 1,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 1,
                  "style": Object {
                    "color": "rgb(255, 255, 255)",
                    "fontSize": 12,
                  },
                },
                "ref": null,
                "rendered": 1,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Component
                  source={
                    Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    }
                  }
                  style={
                    Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 25,
                      "height": 50,
                      "marginTop": 10,
                      "overflow": "hidden",
                      "width": 50,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  },
                  "style": Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 25,
                    "height": 50,
                    "marginTop": 10,
                    "overflow": "hidden",
                    "width": 50,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Text
                style={
                  Object {
                    "fontSize": 18,
                    "marginBottom": 6,
                  }
                }
              >
                Meu pai fez o que ela mandou…
              </Text>,
              <Text
                style={
                  Object {
                    "color": "rgb(51, 51, 51)",
                    "fontStyle": "italic",
                    "marginBottom": 10,
                  }
                }
              >
                01/01/2019
              </Text>,
              <Text
                style={
                  Object {
                    "flex": 1,
                    "flexWrap": "nowrap",
                  }
                }
              >
                Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
              </Text>,
            ],
            "style": Object {
              "flex": 1,
              "marginBottom": 10,
              "marginLeft": 10,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Meu pai fez o que ela mandou…",
                "style": Object {
                  "fontSize": 18,
                  "marginBottom": 6,
                },
              },
              "ref": null,
              "rendered": "Meu pai fez o que ela mandou…",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "01/01/2019",
                "style": Object {
                  "color": "rgb(51, 51, 51)",
                  "fontStyle": "italic",
                  "marginBottom": 10,
                },
              },
              "ref": null,
              "rendered": "01/01/2019",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                "style": Object {
                  "flex": 1,
                  "flexWrap": "nowrap",
                },
              },
              "ref": null,
              "rendered": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Object {
              "alignItems": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "margin": 10,
            }
          }
        >
          <View
            style={
              Object {
                "width": 60,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(45, 82, 113)",
                  "borderRadius": 11,
                  "flexDirection": "column",
                  "height": 22,
                  "justifyContent": "center",
                  "left": 35,
                  "position": "absolute",
                  "width": 22,
                  "zIndex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "rgb(255, 255, 255)",
                    "fontSize": 12,
                  }
                }
              >
                1
              </Text>
            </View>
            <View>
              <Component
                source={
                  Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  }
                }
                style={
                  Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 25,
                    "height": 50,
                    "marginTop": 10,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "marginBottom": 10,
                "marginLeft": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 18,
                  "marginBottom": 6,
                }
              }
            >
              Meu pai fez o que ela mandou…
            </Text>
            <Text
              style={
                Object {
                  "color": "rgb(51, 51, 51)",
                  "fontStyle": "italic",
                  "marginBottom": 10,
                }
              }
            >
              01/01/2019
            </Text>
            <Text
              style={
                Object {
                  "flex": 1,
                  "flexWrap": "nowrap",
                }
              }
            >
              Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
            </Text>
          </View>
        </View>,
        "onPress": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "width": 60,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgb(45, 82, 113)",
                    "borderRadius": 11,
                    "flexDirection": "column",
                    "height": 22,
                    "justifyContent": "center",
                    "left": 35,
                    "position": "absolute",
                    "width": 22,
                    "zIndex": 1,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(255, 255, 255)",
                      "fontSize": 12,
                    }
                  }
                >
                  1
                </Text>
              </View>
              <View>
                <Component
                  source={
                    Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    }
                  }
                  style={
                    Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 25,
                      "height": 50,
                      "marginTop": 10,
                      "overflow": "hidden",
                      "width": 50,
                    }
                  }
                />
              </View>
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                  "marginBottom": 10,
                  "marginLeft": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "fontSize": 18,
                    "marginBottom": 6,
                  }
                }
              >
                Meu pai fez o que ela mandou…
              </Text>
              <Text
                style={
                  Object {
                    "color": "rgb(51, 51, 51)",
                    "fontStyle": "italic",
                    "marginBottom": 10,
                  }
                }
              >
                01/01/2019
              </Text>
              <Text
                style={
                  Object {
                    "flex": 1,
                    "flexWrap": "nowrap",
                  }
                }
              >
                Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
              </Text>
            </View>,
          ],
          "style": Object {
            "alignItems": "stretch",
            "flex": 1,
            "flexDirection": "row",
            "margin": 10,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgb(45, 82, 113)",
                      "borderRadius": 11,
                      "flexDirection": "column",
                      "height": 22,
                      "justifyContent": "center",
                      "left": 35,
                      "position": "absolute",
                      "width": 22,
                      "zIndex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgb(255, 255, 255)",
                        "fontSize": 12,
                      }
                    }
                  >
                    1
                  </Text>
                </View>,
                <View>
                  <Component
                    source={
                      Object {
                        "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                      }
                    }
                    style={
                      Object {
                        "backgroundColor": "rgba(4, 71, 47, 0.75)",
                        "borderRadius": 25,
                        "height": 50,
                        "marginTop": 10,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />
                </View>,
              ],
              "style": Object {
                "width": 60,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Text
                    style={
                      Object {
                        "color": "rgb(255, 255, 255)",
                        "fontSize": 12,
                      }
                    }
                  >
                    1
                  </Text>,
                  "style": Object {
                    "alignItems": "center",
                    "backgroundColor": "rgb(45, 82, 113)",
                    "borderRadius": 11,
                    "flexDirection": "column",
                    "height": 22,
                    "justifyContent": "center",
                    "left": 35,
                    "position": "absolute",
                    "width": 22,
                    "zIndex": 1,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 1,
                    "style": Object {
                      "color": "rgb(255, 255, 255)",
                      "fontSize": 12,
                    },
                  },
                  "ref": null,
                  "rendered": 1,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Component
                    source={
                      Object {
                        "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                      }
                    }
                    style={
                      Object {
                        "backgroundColor": "rgba(4, 71, 47, 0.75)",
                        "borderRadius": 25,
                        "height": 50,
                        "marginTop": 10,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    },
                    "style": Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 25,
                      "height": 50,
                      "marginTop": 10,
                      "overflow": "hidden",
                      "width": 50,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  style={
                    Object {
                      "fontSize": 18,
                      "marginBottom": 6,
                    }
                  }
                >
                  Meu pai fez o que ela mandou…
                </Text>,
                <Text
                  style={
                    Object {
                      "color": "rgb(51, 51, 51)",
                      "fontStyle": "italic",
                      "marginBottom": 10,
                    }
                  }
                >
                  01/01/2019
                </Text>,
                <Text
                  style={
                    Object {
                      "flex": 1,
                      "flexWrap": "nowrap",
                    }
                  }
                >
                  Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
                </Text>,
              ],
              "style": Object {
                "flex": 1,
                "marginBottom": 10,
                "marginLeft": 10,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Meu pai fez o que ela mandou…",
                  "style": Object {
                    "fontSize": 18,
                    "marginBottom": 6,
                  },
                },
                "ref": null,
                "rendered": "Meu pai fez o que ela mandou…",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "01/01/2019",
                  "style": Object {
                    "color": "rgb(51, 51, 51)",
                    "fontStyle": "italic",
                    "marginBottom": 10,
                  },
                },
                "ref": null,
                "rendered": "01/01/2019",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                  "style": Object {
                    "flex": 1,
                    "flexWrap": "nowrap",
                  },
                },
                "ref": null,
                "rendered": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Comment without replies renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Comment
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/profile-pic-may.jpg",
          },
          "name": "May F",
        },
        "body": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
        "dateCreated": 2019-01-01T00:00:00.000Z,
        "id": "21097",
        "title": "Meu pai fez o que ela mandou…",
        "totalReplies": 0,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Object {
            "alignItems": "stretch",
            "flex": 1,
            "flexDirection": "row",
            "margin": 10,
          }
        }
      >
        <View
          style={
            Object {
              "width": 60,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(45, 82, 113)",
                "borderRadius": 11,
                "flexDirection": "column",
                "height": 22,
                "justifyContent": "center",
                "left": 35,
                "position": "absolute",
                "width": 22,
                "zIndex": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgb(255, 255, 255)",
                  "fontSize": 12,
                }
              }
            >
              0
            </Text>
          </View>
          <View>
            <Component
              source={
                Object {
                  "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                }
              }
              style={
                Object {
                  "backgroundColor": "rgba(4, 71, 47, 0.75)",
                  "borderRadius": 25,
                  "height": 50,
                  "marginTop": 10,
                  "overflow": "hidden",
                  "width": 50,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "marginBottom": 10,
              "marginLeft": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "marginBottom": 6,
              }
            }
          >
            Meu pai fez o que ela mandou…
          </Text>
          <Text
            style={
              Object {
                "color": "rgb(51, 51, 51)",
                "fontStyle": "italic",
                "marginBottom": 10,
              }
            }
          >
            01/01/2019
          </Text>
          <Text
            style={
              Object {
                "flex": 1,
                "flexWrap": "nowrap",
              }
            }
          >
            Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
          </Text>
        </View>
      </View>,
      "onPress": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "width": 60,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(45, 82, 113)",
                  "borderRadius": 11,
                  "flexDirection": "column",
                  "height": 22,
                  "justifyContent": "center",
                  "left": 35,
                  "position": "absolute",
                  "width": 22,
                  "zIndex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "rgb(255, 255, 255)",
                    "fontSize": 12,
                  }
                }
              >
                0
              </Text>
            </View>
            <View>
              <Component
                source={
                  Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  }
                }
                style={
                  Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 25,
                    "height": 50,
                    "marginTop": 10,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
            </View>
          </View>,
          <View
            style={
              Object {
                "flex": 1,
                "marginBottom": 10,
                "marginLeft": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 18,
                  "marginBottom": 6,
                }
              }
            >
              Meu pai fez o que ela mandou…
            </Text>
            <Text
              style={
                Object {
                  "color": "rgb(51, 51, 51)",
                  "fontStyle": "italic",
                  "marginBottom": 10,
                }
              }
            >
              01/01/2019
            </Text>
            <Text
              style={
                Object {
                  "flex": 1,
                  "flexWrap": "nowrap",
                }
              }
            >
              Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
            </Text>
          </View>,
        ],
        "style": Object {
          "alignItems": "stretch",
          "flex": 1,
          "flexDirection": "row",
          "margin": 10,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgb(45, 82, 113)",
                    "borderRadius": 11,
                    "flexDirection": "column",
                    "height": 22,
                    "justifyContent": "center",
                    "left": 35,
                    "position": "absolute",
                    "width": 22,
                    "zIndex": 1,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(255, 255, 255)",
                      "fontSize": 12,
                    }
                  }
                >
                  0
                </Text>
              </View>,
              <View>
                <Component
                  source={
                    Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    }
                  }
                  style={
                    Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 25,
                      "height": 50,
                      "marginTop": 10,
                      "overflow": "hidden",
                      "width": 50,
                    }
                  }
                />
              </View>,
            ],
            "style": Object {
              "width": 60,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Text
                  style={
                    Object {
                      "color": "rgb(255, 255, 255)",
                      "fontSize": 12,
                    }
                  }
                >
                  0
                </Text>,
                "style": Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(45, 82, 113)",
                  "borderRadius": 11,
                  "flexDirection": "column",
                  "height": 22,
                  "justifyContent": "center",
                  "left": 35,
                  "position": "absolute",
                  "width": 22,
                  "zIndex": 1,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 0,
                  "style": Object {
                    "color": "rgb(255, 255, 255)",
                    "fontSize": 12,
                  },
                },
                "ref": null,
                "rendered": 0,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Component
                  source={
                    Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    }
                  }
                  style={
                    Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 25,
                      "height": 50,
                      "marginTop": 10,
                      "overflow": "hidden",
                      "width": 50,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  },
                  "style": Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 25,
                    "height": 50,
                    "marginTop": 10,
                    "overflow": "hidden",
                    "width": 50,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Text
                style={
                  Object {
                    "fontSize": 18,
                    "marginBottom": 6,
                  }
                }
              >
                Meu pai fez o que ela mandou…
              </Text>,
              <Text
                style={
                  Object {
                    "color": "rgb(51, 51, 51)",
                    "fontStyle": "italic",
                    "marginBottom": 10,
                  }
                }
              >
                01/01/2019
              </Text>,
              <Text
                style={
                  Object {
                    "flex": 1,
                    "flexWrap": "nowrap",
                  }
                }
              >
                Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
              </Text>,
            ],
            "style": Object {
              "flex": 1,
              "marginBottom": 10,
              "marginLeft": 10,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Meu pai fez o que ela mandou…",
                "style": Object {
                  "fontSize": 18,
                  "marginBottom": 6,
                },
              },
              "ref": null,
              "rendered": "Meu pai fez o que ela mandou…",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "01/01/2019",
                "style": Object {
                  "color": "rgb(51, 51, 51)",
                  "fontStyle": "italic",
                  "marginBottom": 10,
                },
              },
              "ref": null,
              "rendered": "01/01/2019",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                "style": Object {
                  "flex": 1,
                  "flexWrap": "nowrap",
                },
              },
              "ref": null,
              "rendered": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Object {
              "alignItems": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "margin": 10,
            }
          }
        >
          <View
            style={
              Object {
                "width": 60,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(45, 82, 113)",
                  "borderRadius": 11,
                  "flexDirection": "column",
                  "height": 22,
                  "justifyContent": "center",
                  "left": 35,
                  "position": "absolute",
                  "width": 22,
                  "zIndex": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "rgb(255, 255, 255)",
                    "fontSize": 12,
                  }
                }
              >
                0
              </Text>
            </View>
            <View>
              <Component
                source={
                  Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  }
                }
                style={
                  Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 25,
                    "height": 50,
                    "marginTop": 10,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "marginBottom": 10,
                "marginLeft": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 18,
                  "marginBottom": 6,
                }
              }
            >
              Meu pai fez o que ela mandou…
            </Text>
            <Text
              style={
                Object {
                  "color": "rgb(51, 51, 51)",
                  "fontStyle": "italic",
                  "marginBottom": 10,
                }
              }
            >
              01/01/2019
            </Text>
            <Text
              style={
                Object {
                  "flex": 1,
                  "flexWrap": "nowrap",
                }
              }
            >
              Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
            </Text>
          </View>
        </View>,
        "onPress": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "width": 60,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgb(45, 82, 113)",
                    "borderRadius": 11,
                    "flexDirection": "column",
                    "height": 22,
                    "justifyContent": "center",
                    "left": 35,
                    "position": "absolute",
                    "width": 22,
                    "zIndex": 1,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(255, 255, 255)",
                      "fontSize": 12,
                    }
                  }
                >
                  0
                </Text>
              </View>
              <View>
                <Component
                  source={
                    Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    }
                  }
                  style={
                    Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 25,
                      "height": 50,
                      "marginTop": 10,
                      "overflow": "hidden",
                      "width": 50,
                    }
                  }
                />
              </View>
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                  "marginBottom": 10,
                  "marginLeft": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "fontSize": 18,
                    "marginBottom": 6,
                  }
                }
              >
                Meu pai fez o que ela mandou…
              </Text>
              <Text
                style={
                  Object {
                    "color": "rgb(51, 51, 51)",
                    "fontStyle": "italic",
                    "marginBottom": 10,
                  }
                }
              >
                01/01/2019
              </Text>
              <Text
                style={
                  Object {
                    "flex": 1,
                    "flexWrap": "nowrap",
                  }
                }
              >
                Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
              </Text>
            </View>,
          ],
          "style": Object {
            "alignItems": "stretch",
            "flex": 1,
            "flexDirection": "row",
            "margin": 10,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgb(45, 82, 113)",
                      "borderRadius": 11,
                      "flexDirection": "column",
                      "height": 22,
                      "justifyContent": "center",
                      "left": 35,
                      "position": "absolute",
                      "width": 22,
                      "zIndex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgb(255, 255, 255)",
                        "fontSize": 12,
                      }
                    }
                  >
                    0
                  </Text>
                </View>,
                <View>
                  <Component
                    source={
                      Object {
                        "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                      }
                    }
                    style={
                      Object {
                        "backgroundColor": "rgba(4, 71, 47, 0.75)",
                        "borderRadius": 25,
                        "height": 50,
                        "marginTop": 10,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />
                </View>,
              ],
              "style": Object {
                "width": 60,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Text
                    style={
                      Object {
                        "color": "rgb(255, 255, 255)",
                        "fontSize": 12,
                      }
                    }
                  >
                    0
                  </Text>,
                  "style": Object {
                    "alignItems": "center",
                    "backgroundColor": "rgb(45, 82, 113)",
                    "borderRadius": 11,
                    "flexDirection": "column",
                    "height": 22,
                    "justifyContent": "center",
                    "left": 35,
                    "position": "absolute",
                    "width": 22,
                    "zIndex": 1,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 0,
                    "style": Object {
                      "color": "rgb(255, 255, 255)",
                      "fontSize": 12,
                    },
                  },
                  "ref": null,
                  "rendered": 0,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Component
                    source={
                      Object {
                        "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                      }
                    }
                    style={
                      Object {
                        "backgroundColor": "rgba(4, 71, 47, 0.75)",
                        "borderRadius": 25,
                        "height": 50,
                        "marginTop": 10,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    },
                    "style": Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 25,
                      "height": 50,
                      "marginTop": 10,
                      "overflow": "hidden",
                      "width": 50,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  style={
                    Object {
                      "fontSize": 18,
                      "marginBottom": 6,
                    }
                  }
                >
                  Meu pai fez o que ela mandou…
                </Text>,
                <Text
                  style={
                    Object {
                      "color": "rgb(51, 51, 51)",
                      "fontStyle": "italic",
                      "marginBottom": 10,
                    }
                  }
                >
                  01/01/2019
                </Text>,
                <Text
                  style={
                    Object {
                      "flex": 1,
                      "flexWrap": "nowrap",
                    }
                  }
                >
                  Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
                </Text>,
              ],
              "style": Object {
                "flex": 1,
                "marginBottom": 10,
                "marginLeft": 10,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Meu pai fez o que ela mandou…",
                  "style": Object {
                    "fontSize": 18,
                    "marginBottom": 6,
                  },
                },
                "ref": null,
                "rendered": "Meu pai fez o que ela mandou…",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "01/01/2019",
                  "style": Object {
                    "color": "rgb(51, 51, 51)",
                    "fontStyle": "italic",
                    "marginBottom": 10,
                  },
                },
                "ref": null,
                "rendered": "01/01/2019",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                  "style": Object {
                    "flex": 1,
                    "flexWrap": "nowrap",
                  },
                },
                "ref": null,
                "rendered": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
